[package]
name = "minecrevy_io"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#TODO: full derive system?
#minecrevy_io_derive = { path = "./minecrevy_io_derive" }

async-trait = "0.1"
byteorder = "1.4"
once_cell = "1.8"
tokio = { version = "1.14", features = ["io-util"] }
